remove iam module
