# pkg/apigateway/spec/api.swagger.json
@@ -70,32 +70,6 @@
           "HelloService"
         ]
       }
-    },
-    "/api/v1/oauth2/token": {
-      "post": {
-        "operationId": "Token",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/grpcapiTokenResponse"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/grpcapiTokenRequest"
-            }
-          }
-        ],
-        "tags": [
-          "TokenManager"
-        ]
-      }
     }
   },
   "definitions": {
@@ -127,53 +101,6 @@
       "type": "object",
       "properties": {
         "result": {
-          "type": "string"
-        }
-      }
-    },
-    "grpcapiTokenRequest": {
-      "type": "object",
-      "properties": {
-        "grant_type": {
-          "type": "string"
-        },
-        "client_id": {
-          "type": "string"
-        },
-        "client_secret": {
-          "type": "string"
-        },
-        "scope": {
-          "type": "string"
-        },
-        "username": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "refresh_token": {
-          "type": "string"
-        }
-      }
-    },
-    "grpcapiTokenResponse": {
-      "type": "object",
-      "properties": {
-        "token_type": {
-          "type": "string"
-        },
-        "expires_in": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "access_token": {
-          "type": "string"
-        },
-        "refresh_token": {
-          "type": "string"
-        },
-        "id_token": {
           "type": "string"
         }
       }
